# storySummary

./: .env.example  .gitignore  analyze_chapters.py  analyze_structure.py  check_chunks.py  debug_chapter.html  detail_recovery_output.txt  node_output.json  outsider_complete.json  outsider_manuscript.txt  pipeline_output.json  pyproject.toml  requirements.txt  test_manuscript_pipeline.py  test_outline_agent.py  test_script_output.txt  test_style.py  vector_search_output.txt
.claude/: ralph-loop.local.md
data/: story_summary.db-shm  story_summary.db-wal
data/vectors/: chroma.sqlite3
docs/: websocket-api.md  基于您的需求，我将为您构建一个完整的中长篇小说结构化索引存储方案。这个方案不仅要实现高效存储，更要为AI解说创作提供精准的内容理解支撑。.md
notes/: note.ipynb  outline.ipynb  reader.ipynb
output/: style_test_result.json
output/作家榜经典：局外人（我就是要活出真实的自己，哪怕成为你眼中的局外人！北岛推荐版本！获诺贝尔文学奖基金会官方授权！免费赠送法语原版！） (大星作家榜经典文库)/: writing_state.json
output/夏日沉沦纳粹高徒/: writing_state.json
output/测试局外人E2E_0815be67/: writing_state.json
output/测试局外人E2E_61483576/: writing_state.json
output/测试局外人E2E_79d26b89/: writing_state.json
output/测试局外人E2E_b8d4cccd/: writing_state.json
output/测试局外人E2E_ff16fb9e/: manuscript.txt  writing_state.json
samples/: sample2.txt  sample_chapter.txt  wind.txt  四季奇谭.epub  夏日沉沦纳粹高徒.txt
scripts/: debug_node_generation.py  run_agent_review.py  start_backend.py  start_frontend.py  test_full_analysis.py  test_node_generator.py  test_outline_outsider.py
src/: cli.py  config.py  logging_config.py  pipeline.py
tests/: test_pipeline.py
web/: index.html  package-lock.json  package.json  vite.config.ts
(+230 files in other folders)
